Play a recorded session back through the engine, with the dice it actually rolled.